# gunslingers

./: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  README.md  compilation_command.txt  compile.sh  config.h  gameRound.cpp  gameRound.h  graphical_functions.cpp  gunslinger  gunslinger.i64  main.cpp  sprite.cpp  sprite.h  testing_sdl  textureManager.h  to_do_list.txt
sprite_images/: crediting.txt
